# ds-notebooks

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
brisbane-born-elsewhere/: 2021Census_G09F_QLD_SAL.csv  2021Census_G09G_QLD_SAL.csv  2021Census_G09H_QLD_SAL.csv  G09_F-H.txt  brisbane-suburbs.txt  country-regions.json
brisbane-suburb-mean-elevation/: brisbane-elevation.tif  brisbane-suburb-mean-elevation.ipynb
data/: brisbane-suburbs.parq
notebooks/: brisbane-suburbs-mean-elevation.html  brisbane-suburbs-mean-elevation.ipynb  matplotlib-animation-with-legend.html  matplotlib-animation-with-legend.ipynb  merging-adjacent-polygons-on-attribute.html  merging-adjacent-polygons-on-attribute.ipynb  nepal-earthquakes.html  nepal-earthquakes.ipynb  qld-election-2024-pref-flows.html  qld-election-2024-pref-flows.ipynb  spatial-kde-plot.html  spatial-kde-plot.ipynb
site_libs/bootstrap/: bootstrap-56a24cf59d0ffb3dbbb271df7a8e30cb.min.css  bootstrap-5b19d9c9f76aaff0ba01db93fc195645.min.css  bootstrap-dark-32d4bee46a01b3009841048de36136d7.min.css  bootstrap-dark-bcd7aad71d2c6417af5f03afe98cc027.min.css
