[project]
name = "ds-notebooks"
version = "0.1.0"
description = "Collection of data-science notebooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "geoplot>=0.5.1",
    "geoviews>=1.14.0",
    "holoviews>=1.20.2",
    "jenkspy>=0.4.1",
    "jupyterlab-vim>=4.1.4",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.1",
    "nbqa>=1.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "ruff>=0.11.4",
    "selenium>=4.30.0",
    "vegafusion[embed]>=2.0.2",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
