[project]
name = "ds-notebooks"
version = "0.1.0"
description = "Collection of data-science notebooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "contextily>=1.6.2",
    "dask-geopandas>=0.4.3",
    "datashader>=0.17.0",
    "descartes>=1.1.0",
    "elevation>=1.1.3",
    "folium>=0.19.5",
    "gdal==3.10.2",
    "geoalchemy2>=0.17.1",
    "geopandas>=1.0.1",
    "geoplot>=0.5.1",
    "geoviews>=1.14.0",
    "holoviews>=1.20.2",
    "jenkspy>=0.4.1",
    "jupysql>=0.11.1",
    "jupyter-book>=1.0.4.post1",
    "jupyterlab>=4.3.5",
    "jupyterlab-vim>=4.1.4",
    "jupytext>=1.17.0",
    "libpysal>=4.13.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg[binary]>=3.2.6",
    "pyarrow>=19.0.1",
    "pyviz-comms>=3.0.4",
    "rasterio>=1.4.3",
    "rioxarray>=0.18.2",
    "ruff>=0.11.4",
    "selenium>=4.30.0",
    "sqlalchemy>=2.0.40",
    "vegafusion[embed]>=2.0.2",
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "pyright>=1.1.399",
]

# Pair ipynb notebooks to py:percent text notebooks
# [tool.jupytext]
# formats = "ipynb,py:percent"
